added some new css

--- a/index.html
+++ b/index.html
@@ -1,91 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        The Ultimate Landing Page
-    </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Ultimate Landing Page</title>
     <!-- css link===============================> -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index.css" />
 
     <!-- Fontawesome link===============================> -->
-    <link rel="stylesheet" href="./assets/fontawesome-free-6.0.0-web/css/all.css">
-
-
-</head>
-<body>
-
+    <link
+      rel="stylesheet"
+      href="./assets/fontawesome-free-6.0.0-web/css/all.css"
+    />
+  </head>
+  <body>
     <!-- HERO SECTION ===============================> -->
     <section id="hero" class="section hero">
+      <header class="header">
+        <div class="extreme-top">
+          <span class="logo">Envato<b>market</b></span>
+          <div id="topRightEnd" class="top-right-end">
 
-        <header class="header">
-            <div class="extreme-top">
-                <span class="logo">Envato<b>market</b></span>
-                <div class="top-right-end">
-                    <button class="btn">Buy Now</button>
-                    <span class="edge"><i class="fas fa-xmark"></i><p>Remove Frame</p></span>
-                </div>
+            
+              <i id="chev-left" class="fas fa-chevron-left chev-left"></i>
+          
+
+            <div id="social-links" class="social-links">
+              <a href="#" class="social-link face">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="#" class="social-link yout">
+                <i class="fab fa-youtube"></i>
+              </a>
+              <a href="#" class="social-link twitt">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="social-link linkin">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <i id="chev-right" class="fas fa-chevron-right chev-right"></i>
             </div>
-            <div class="top-nav">
-                <div class="logo">
-                    <img src="./images/1.jpg" alt="" class="logo-image">
-                    <div class="logo-content">
-                        Landeux
-                        <br>
-                        Landing page template
-                    </div>
-                </div>
-                <nav class="nav">
-                    <ul>
-                        <a href="#">home</a>
-                        <a href="#">about</a>
-                        <a href="#">features</a>
-                        <a href="#">use case</a>
-                        <a href="#">pricing</a>
-                    </ul>
-                    <div class="header-btns">
-                        <button class="header-btn">free version</button>
-                        <button class="header-btn two">pro version</button>
-                    </div>
-                </nav>
+            <button class="btn">Sign In</button>
+          </div>
+        </div>
+        <div class="top-nav">
+          <div class="logo">
+            <img src="./images/1.jpg" alt="" class="logo-image" />
+            <div class="logo-content">
+              Landeux
+              <br />
+              Landing page template
             </div>
-        </header>
+            <i class="fas fa-search"></i>
+          </div>
+          <nav class="nav">
+            <ul>
+              <li class="nav-list">
+                <a class="hov" href="#">home</a>
+              </li>
+              <li class="nav-list">
+                <a class="hov" href="#">services</a>
+                <ul class="drop-down">
+                  <li class="nav-list">
+                    <a class="hov2" href="#">homehomehome</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                </ul>
+                <span class="after"></span>
+              </li>
+              <li class="nav-list">
+                <a class="hov" href="#">Projects</a>
+                <ul class="drop-down">
+                  <li class="nav-list">
+                    <a class="hov2" href="#">homehomehome</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                </ul>
+                <span class="after"></span>
+              </li>
+              <li class="nav-list">
+                <a class="hov" href="#">blogs</a>
+                <ul class="drop-down">
+                  <li class="nav-list">
+                    <a class="hov2" href="#">homehomehome</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                </ul>
+                <span class="after"></span>
+              </li>
+              <li class="nav-list">
+                <a class="hov" href="#">others</a>
+                <ul class="drop-down">
+                  <li class="nav-list">
+                    <a class="hov2" href="#">homehomehome</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="hov2" href="#">home</a>
+                  </li>
+                </ul>
+                <span class="after"></span>
+              </li>
+            </ul>
+            <div class="header-btns">
+              <button class="header-btn">Enroll</button>
+              <button class="header-btn two">Register</button>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <h1>Hero</h1>
     </section>
     <!-- SERVICES SECTION ===============================> -->
-    <section id="services" class="section services">
-        Services
-    </section>
+    <section id="services" class="section services">Services</section>
     <!-- PROJECTS SECTION ===============================> -->
-    <section id="projects" class="section projects">
-        Projects
-    </section>
+    <section id="projects" class="section projects">Projects</section>
 
     <!-- ABOUT US SECTION ===============================> -->
-    <section id="about" class="section about">
-        About Us
-    </section>
+    <section id="about" class="section about">About Us</section>
     <!-- CONTACT US SECTION ===============================> -->
-    <section id="contact" class="section contact">
-        Contact Us
-    </section>
+    <section id="contact" class="section contact">Contact Us</section>
     <!-- FAQS SECTION ===============================> -->
-    <section id="faqs" class="section faqs">
-        FAQs
-    </section>
+    <section id="faqs" class="section faqs">FAQs</section>
     <!-- BLOGS SECTION ===============================> -->
-    <section id="blogs" class="section blogs">
-        BLOGS
-    </section>
+    <section id="blogs" class="section blogs">BLOGS</section>
     <!-- GALLERY SECTION ===============================> -->
-    <section id="gallery" class="section gallery">
-        Gallery
-    </section>
+    <section id="gallery" class="section gallery">Gallery</section>
     <!-- FOOTER SECTION ===============================> -->
 
-    <footer id="footer" class="footer">
-        Footer
-    </footer>
-</body>
+    <footer id="footer" class="footer">Footer</footer>
+
+
+
+    <script src="./js/script.js"></script>
+  </body>
 </html>
