--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
               </li>
             </ul>
             <div class="header-btns">
-              <button class="header-btn">Enroll</button>
-              <button class="header-btn two">Register</button>
+              <button class="header-btn">Register Now</button>
+              <button class="header-btn two">Enroll</button>
             </div>
           </nav>
         </div>
