added the invisible header on scroll

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- HERO SECTION ===============================> -->
     <section id="hero" class="section hero">
-      <header class="header">
+      <header id="header" class="header">
         <div class="extreme-top">
           <span class="logo">Envato<b>market</b></span>
           <div id="topRightEnd" class="top-right-end">
@@ -174,6 +174,8 @@
 
 
 
-    <script src="./js/script.js"></script>
+    <script src="./js/scrp.js"></script>
+    
+    
   </body>
 </html>
